--- a/LR1_OOP/MainWindow.xaml
+++ b/LR1_OOP/MainWindow.xaml
@@ -5,24 +5,45 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LR1_OOP"
         mc:Ignorable="d"
-        Title="MainWindow" 
+        Title="Графический редактор" 
         Height="768" 
-        MinHeight="600"
+        MinHeight="620"
         Width="1200" 
         MinWidth="900"
         WindowStyle="SingleBorderWindow" 
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" >
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
             <RowDefinition Height="0.08*" />
             <RowDefinition Height="0.92*" />
         </Grid.RowDefinitions>
+        <Menu
+            Grid.Row="0" 
+            VerticalAlignment="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Открыть" IsEnabled="False"/>
+                <MenuItem Header="Сохранить" IsEnabled="False"/>
+                <Separator />
+                <MenuItem 
+                    Name="itemExit" 
+                    Header="Выход" 
+                    Click="itemExit_Click">
+                </MenuItem>
+            </MenuItem>
+            <MenuItem 
+                Header="Редактировать" >
+                <MenuItem Header="Цвет контура" Click="btnStrokeColor_Click"/>
+                <MenuItem Header="Цвет заливки" Click="btnFillColor_Click"/>
+                <Separator />
+                <MenuItem Header="Нарисовать" Click="btnDraw_Click"/>
+            </MenuItem>
+        </Menu>
         <DockPanel
-            Grid.Row="0"
-            Background="#FFE5E5E5" >
+            Grid.Row="1"
+            Background="#FFE5E5E5">
             <ComboBox
-                Name="comboShapes"
-                DockPanel.Dock="Left"
+                Name="cmbShapes"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Left"
                 Margin="16,0,0,0"
@@ -34,62 +55,73 @@
                 Content="Цвет контура:"
                 Margin="16,0,0,0"
                 VerticalAlignment="Center"
-                HorizontalAlignment="Left" 
-                DockPanel.Dock="Left"/>
+                HorizontalAlignment="Left" />
             <Button 
                 Name="btnStrokeColor"
-                Content="Выбрать цвет..." 
-                Width="100" 
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Center"
-                DockPanel.Dock="Left"
+                Height="22"
+                Width="22"
+                Click="btnStrokeColor_Click"
                 Margin="8,0,0,0"
-                Click="btnStrokeColor_Click"/>
+                Padding="0,0,0,0"
+                VerticalAlignment="Center">
+                <Rectangle
+                    Name="rectStrokeColor"
+                    Height="16"
+                    Width="16"
+                    StrokeThickness="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+                </Rectangle>
+            </Button>
             <Label 
                 Content="Цвет заливки:" 
-                DockPanel.Dock="Left"  
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Center"
                 Margin="16,0,0,0"/>
             <Button 
                 Name="btnFillColor"
-                Content="Выбрать цвет..."
-                DockPanel.Dock="Left" 
+                Height="22"
+                Width="22"
                 Click="btnFillColor_Click"
-                Margin="8,0,0,0" 
-                HorizontalAlignment="Left" 
-                VerticalAlignment="Center" 
-                Width="100" />
+                Margin="8,0,0,0"
+                Padding="0,0,0,0"
+                VerticalAlignment="Center">
+                <Rectangle
+                    Name="rectFillColor"
+                    Height="16"
+                    Width="16"
+                    StrokeThickness="0"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+                </Rectangle>
+            </Button>
             <Label 
-                Content="Толщина контура:" 
-                DockPanel.Dock="Left"  
+                Content="Толщина контура:"  
                 HorizontalAlignment="Left" 
                 VerticalAlignment="Center"
                 Margin="16,0,0,0"/>
             <Slider
-                Name="slStrWidth"
+                Name="slidStrWidth"
                 Width="100"
-                Margin="8,0,0,0" 
-                HorizontalAlignment="Left" 
+                Margin="8,0,0,0"  
                 VerticalAlignment="Center"
                 Minimum="0"
                 Maximum="32"
-                ValueChanged="slStrWidth_ValueChanged">
+                IsSnapToTickEnabled="True"
+                ValueChanged="slidStrWidth_ValueChanged">
             </Slider>
             <TextBox 
-                Name="tbStrWidth"
-                Text="{Binding ElementName=slStrWidth, Path=Value, UpdateSourceTrigger=PropertyChanged}"
+                Name="txtStrWidth"
+                Text="{Binding ElementName=slidStrWidth, Path=Value, UpdateSourceTrigger=PropertyChanged}"
                 TextWrapping="NoWrap"
                 Margin="8,0,0,0" 
-                TextAlignment="Right"
-                HorizontalAlignment="Left" 
+                TextAlignment="Right" 
                 VerticalAlignment="Center"
                 Width="35">
             </TextBox>
             <Button 
                 Name="btnDraw"
                 Content="Нарисовать"
-                DockPanel.Dock="Left"
                 Click="btnDraw_Click"
                 Margin="0,0,16,0" 
                 HorizontalAlignment="Right" 
@@ -98,6 +130,7 @@
         </DockPanel>
         <Canvas
             Name="canvasField"
-            Grid.Row="1" />
+            Grid.Row="2" >
+        </Canvas>
     </Grid>
 </Window>
