--- a/LR1_OOP/MainWindow.xaml
+++ b/LR1_OOP/MainWindow.xaml
@@ -141,7 +141,7 @@
                     Width="25"
                     TextChanged="txtCountPoints_TextChanged">
                     <TextBox.Text>
-                        <Binding Path="CountPoints" Mode="TwoWay" ValidatesOnExceptions="True" UpdateSourceTrigger="PropertyChanged" >
+                        <Binding Path="CountPoints" ValidatesOnExceptions="True" UpdateSourceTrigger="PropertyChanged" >
                             <Binding.ValidationRules>
                                 <local:RangeValidationRule MinValue="3" MaxValue="20" />
                             </Binding.ValidationRules>
